--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
     <color name="white">#ffffff</color>
+    <color name="light_gray">#eeeeee</color>
     <color name="iap_indicator_inactive">#6C7D8A</color>
 
 </resources>
